tests/valid/MethodCall_Valid_1.whiley
import whiley.lang.*

method f(int x) -> void:
    skip

method main(System.Console sys) -> void:
    f(1)
