tests/invalid/Property_Invalid_9.whiley
property inc(int x) -> (bool r):
    x + 1